--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+Flask==2.3.3
+Flask-Caching==2.1.0
+Flask-Compress==1.14
 colorama>=0.4.5
 websockets>=11.0.3
 PyYAML>=6.0
@@ -7,3 +10,6 @@ schema>=0.7.5
 kivy>=2.2.0
 bsdiff4>=1.2.3
 platformdirs>=3.5.1
+pony==0.7.17
+waitress==2.1.2
+bokeh==3.3.1
