--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,12 @@
-Flask==2.3.3
-Flask-Caching==2.1.0
-Flask-Compress==1.14
 colorama>=0.4.5
 websockets>=11.0.3
-PyYAML>=6.0
-jellyfish>=0.11.2
+PyYAML>=6.0.1
+jellyfish>=1.0.1
 jinja2>=3.1.2
 schema>=0.7.5
 kivy>=2.2.0
-bsdiff4>=1.2.3
-platformdirs>=3.5.1
-pony==0.7.17
-waitress==2.1.2
-bokeh==3.3.1
+bsdiff4>=1.2.4
+platformdirs>=3.9.1
+certifi>=2023.7.22
+cython>=3.0.5
+cymem>=2.0.8
