--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@
 *.apsave
 *.BIN
 *.puml
+*.py.bak
 
 setups
 build
@@ -198,3 +199,9 @@ minecraft_versions.json
 .LSOverride
 Thumbs.db
 [Dd]esktop.ini
+
+/worlds/*.apworld
+/SymbolicLinks.bat
+/TestResults
+/worlds/*.zip
+/worlds/tracker
