--- a/.gitignore
+++ b/.gitignore
@@ -198,3 +198,10 @@ minecraft_versions.json
 .LSOverride
 Thumbs.db
 [Dd]esktop.ini
+
+/worlds/*.apworld
+/SymbolicLinks.bat
+/TestResults
+/worlds/*.zip
+/worlds/tracker
+/worlds/tmp
